Handle all differently, remove index

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Who is responsible? || Climate Change Responsibility</title>
+    <title>Who is responsible?</title>
   </head>
   <body>
     <noscript>
