--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#fa3d51">
-<meta name="theme-color" content="#1d1d25">
+    <meta name="theme-color" content="#1d1d25">
     <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is added to the
@@ -23,6 +23,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Who is responsible?</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=%REACT_APP_GOOGLE_ANALYTICS%"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', '%REACT_APP_GOOGLE_ANALYTICS%');
+</script>
   </head>
   <body>
     <noscript>
