--- a/public/index.html
+++ b/public/index.html
@@ -3,50 +3,80 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/icons/favicon-16x16.png">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#fa3d51">
+    <link rel="mask-icon" href="%PUBLIC_URL%/icons/safari-pinned-tab.svg" color="#fa3d51">
     <meta name="theme-color" content="#1d1d25">
+
     <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <script async src="https://www.googletagmanager.com/gtag/js?id=%REACT_APP_GOOGLE_ANALYTICS%"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Who is responsible?</title>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=%REACT_APP_GOOGLE_ANALYTICS%"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+      gtag('config', '%REACT_APP_GOOGLE_ANALYTICS%');
+    </script>
 
-  gtag('config', '%REACT_APP_GOOGLE_ANALYTICS%');
-</script>
+    <script>
+        (function(h,o,t,j,a,r){
+            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+            h._hjSettings={hjid:%REACT_APP_HOTJAR_ID%,hjsv:6};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
+    <!-- Facebook Pixel Code -->
+    <script>
+      !function(f,b,e,v,n,t,s)
+      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+      n.queue=[];t=b.createElement(e);t.async=!0;
+      t.src=v;s=b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t,s)}(window, document,'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+      fbq('init', '%REACT_APP_FACEBOOK_PIXEL_ID%');
+      fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=%REACT_APP_FACEBOOK_PIXEL_ID%&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Facebook Pixel Code -->
+
+    <title>Who is responsible for climate change?</title>
+    <meta name="description" content="See how each country stacks up when measuring vulnerability, preparedness, and contribution to climate change." />
+
+    <link rel="canonical" href="https://whoisresponsible.us/">
+
+    <meta itemprop="name" content="Who is responsible for climate change?">
+    <meta itemprop="description" content="See how each country stacks up when measuring vulnerability, preparedness, and contribution to climate change.">
+    <meta itemprop="image" content="%PUBLIC_URL%/images/logo.png">
+    <meta name="description" content="See how each country stacks up when measuring vulnerability, preparedness, and contribution to climate change.">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@kevinahuber">
+    <meta name="twitter:title" content="Who is responsible for climate change?">
+    <meta name="twitter:description" content="See how each country stacks up when measuring vulnerability, preparedness, and contribution to climate change.">
+    <meta name="twitter:creator" content="@kevinahuber">
+    <meta name="twitter:image:src" content="%PUBLIC_URL%/images/logo.png">
+
+    <meta property="og:title" content="Who is responsible for climate change?">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://whoisresponsible.us/">
+    <meta property="og:image" content="%PUBLIC_URL%/images/logo.png">
+    <meta property="og:description" content="See how each country stacks up when measuring vulnerability, preparedness, and contribution to climate change.">
+    <meta property="og:site_name" content="Who is responsible for climate change?">
   </head>
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
+      Oh no! Looks like you do not have JavaScript enabled. To explore who is responsible for Climate Change, enable JavaScript.
     </noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
