--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
 
     <meta itemprop="name" content="Who is responsible for climate change?">
     <meta itemprop="description" content="See how each country stacks up when measuring vulnerability, preparedness, and contribution to climate change.">
-    <meta itemprop="image" content="%PUBLIC_URL%/images/logo.png">
+    <meta itemprop="image" content="%PUBLIC_URL%/images/map.png">
     <meta name="description" content="See how each country stacks up when measuring vulnerability, preparedness, and contribution to climate change.">
 
     <meta name="twitter:card" content="summary_large_image">
@@ -64,12 +64,12 @@
     <meta name="twitter:title" content="Who is responsible for climate change?">
     <meta name="twitter:description" content="See how each country stacks up when measuring vulnerability, preparedness, and contribution to climate change.">
     <meta name="twitter:creator" content="@kevinahuber">
-    <meta name="twitter:image:src" content="%PUBLIC_URL%/images/logo.png">
+    <meta name="twitter:image:src" content="%PUBLIC_URL%/images/map.png">
 
     <meta property="og:title" content="Who is responsible for climate change?">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://whoisresponsible.us/">
-    <meta property="og:image" content="%PUBLIC_URL%/images/logo.png">
+    <meta property="og:image" content="%PUBLIC_URL%/images/map.png">
     <meta property="og:description" content="See how each country stacks up when measuring vulnerability, preparedness, and contribution to climate change.">
     <meta property="og:site_name" content="Who is responsible for climate change?">
   </head>
